--- a/index.html
+++ b/index.html
@@ -12,33 +12,33 @@
   <!-- code a Hero / Banner section -->
   <div class="banner">
     <div class="container">
-      <h1>Le Wagon brings tech skills to creative people!</h1>
-      <p>Change your life and learn to code at one of our campuses around the world.</p>
-      <a class="btn-primary" href="#">Apply now!</a>
+      <h1>¡Le Wagon aporta habilidades tecnológicas a las personas creativas!</h1>
+      <p>Cambie su vida y aprenda a codificar en uno de nuestros campus en todo el mundo.</p>
+      <a class="btn-primary" href="#">¡Aplica ya!</a>
     </div>
   </div>
 
   <!-- code a "How it works" section -->
   <div class="container">
-    <h2 class="text-center">How it works</h2>
+    <h2 class="text-center">Cómo funciona</h2>
     <div class="cards">
 
       <div class="card">
         <img src="images/apply.svg" alt="">
-        <h4>Apply</h4>
-        <p>Lorem ipsum dolor sit amet.</p>
+        <h4>Aprende</h4>
+        <p>Adquiere nuevas habilidades tecnicas para el futuro.</p>
       </div>
 
       <div class="card">
         <img src="images/learn.svg" alt="">
-        <h4>Learn to code</h4>
-        <p>Lorem ipsum dolor sit amet.</p>
+        <h4>Codifica</h4>
+        <p>aprende a leer y escribir codigo en lenguajes de programacion, el lenguaje de las computadoras.</p>
       </div>
 
       <div class="card">
         <img src="images/product.svg" alt="">
-        <h4>Build products</h4>
-        <p>Lorem ipsum dolor sit amet.</p>
+        <h4>Construye tus productos</h4>
+        <p>Crea nuevas herramientas para tus proyectos y clientes.</p>
       </div>
 
     </div>
